--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -6,7 +6,10 @@ jobs:
   first_job:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4.2.2 
       - name: Welcome message
-        run: echo "My sample pipeline creation"
+        run: echo "My sample pipeline creation" >> mysample.txt
       - name: List files
         run: ls
+      - name: Reading file
+        run: cat mysample.txt
