--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -13,3 +13,10 @@ jobs:
         run: ls
       - name: Reading file
         run: cat mysample.txt
+  second_jobs:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checking out the git repo
+        uses: actions/checkout@v4.2.2 
+      - name: Listing the file in the repo
+        run: ls -ltr
