--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -1,4 +1,4 @@
-name: My First Workflow
+name: My sample Pipeline
 
 on: push
 
@@ -20,3 +20,4 @@ jobs:
         uses: actions/checkout@v4.2.2 
       - name: Listing the file in the repo
         run: ls -ltr
+ 
