Added if statment with github context

--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -25,7 +25,7 @@ jobs:
           path: mysample.txt 
 
   second_jobs:
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/feature'
     runs-on: ubuntu-22.04
     needs: first_job
     concurrency:
